# siamese

./: .gitignore  CMakeLists.txt  Logger.cpp  PacketAllocator.h  SiameseDecoder.cpp  SiameseDecoder.h  SiameseEncoder.cpp  armv8-toolchain.cmake  build_armv8.sh  deploy_to_device.sh  gf256.cpp  gf256.h
results/: gf256_neon_128.cpp  gf256_neon_256.cpp  main-block-240.cpp  report.md  simpleperf.example
tests/: unit_test.cpp
tests/_attic_/: gentab_graycode.cpp
